# kipp

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  WORKSPACE.bazel  _server.go  bazel-bin  bazel-kipp  bazel-out  bazel-testlogs  conf.db  conf.go  db.go  deps.bzl  driver.go  encoding.go  fs.go  fs_test.go  go.mod  go.sum  go_deps.bzl  main.go  option.go  server.go  server_test.go  store.go
.github/workflows/: ci.yml  push.yml  release.yml  test.yml
_/: mime.json
_/public/: index.html
_/public/css/: main.css  opentip.css
_/public/js/: async.min.js  main.js  opentip-jquery.min.js
_/public/new/: index.html  main.css  main.go  new.js  new.js.map
_/public/new/blob/: blob.go
_/public/new/file/: file.go
cmd/conf/: main.go  upload.go
cmd/kipp/: BUILD.bazel  flag.go  main.go  mime.go  serve.go  tags.bzl  upload.go
crypto/: crypto.go  ctr.go  decrypt.go  decrypt_test.go  encrypt.go  encrypt_test.go  reader.go  writer.go
ctr/: ctr.go  io.go
database/: BUILD.bazel  database.go
database/badger/: BUILD.bazel  badger.go
database/sql/: BUILD.bazel  sql.go
database/sqlite3/: BUILD.bazel  database.go  sqlite3.go
default/: mime.json
default/public/: index.html  sharex
default/public/css/: main.css
default/public/js/: jquery.min.js  jszip.min.js  main.js  moment.min.js  tinyago.min.js
default/public/private/: index.html
default/public/private/css/: main.css
default/public/private/js/: main.js
files/: aYIclp-rK8Yv
filesystem/: BUILD.bazel  fs.go
filesystem/b2/: BUILD.bazel  b2.go  reader.go
filesystem/local/: BUILD.bazel  file.go  filesystem.go  fs.go  local.go  local_test.go  temp.go  writer.go
filesystem/s3/: BUILD.bazel  reader.go  s3.go  writer.go
fs/: fs.go
fs/local/: fs.go  fs_test.go  tmp.go
hack/: workspace-status.sh
internal/databaseutil/: BUILD.bazel  parse.go
internal/filesystemutil/: BUILD.bazel  filesystemutil.go  parse.go
internal/httputil/: BUILD.bazel  httputil.go
internal/x/context/: BUILD.bazel  context.go
model/: content.go  model.go
old_crypto/: _ctr.go  cbc.go  crypto.go  ctr.go  decrypt.go  encrypt.go
public/: index.html
public/css/: main.css
public/js/: filesize.js  main.js  musicmetadata.min.js
route/: server.go  upload.go  view.go
tools/: BUILD.bazel  tools.go
web/: index.html  robots.txt
web/css/: main.css
web/js/: main.js
web/private/: index.html
web/private/css/: main.css
worker/: cleanup.go
