load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/uhthomas/kipp
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "fs.go",
        "server.go",
    ],
    importpath = "github.com/uhthomas/kipp",
    visibility = ["//visibility:public"],
    deps = [
        "//database:go_default_library",
        "//filesystem:go_default_library",
        "@com_github_gabriel_vasile_mimetype//:go_default_library",
        "@com_github_zeebo_blake3//:go_default_library",
    ],
)

filegroup(
    name = "web",
    srcs = glob(["web/**"]),
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["fs_test.go"],
    embed = [":go_default_library"],
    deps = ["//database:go_default_library"],
)
