load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "flag.go",
        "main.go",
        "mime.go",
        "serve.go",
    ],
    importpath = "github.com/uhthomas/kipp/cmd/kipp",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//internal/databaseutil:go_default_library",
        "//internal/filesystemutil:go_default_library",
        "@com_github_alecthomas_units//:go_default_library",
        "@com_github_lib_pq//:go_default_library",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "kipp",
    srcs = [
        "flag.go",
        "main.go",
        "mime.go",
        "serve.go",
    ],
    data = ["//:web"],
    goarch = "amd64",
    goos = "linux",
    importpath = "github.com/uhthomas/kipp/cmd/kipp",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//internal/databaseutil:go_default_library",
        "//internal/filesystemutil:go_default_library",
        "@com_github_alecthomas_units//:go_default_library",
        "@com_github_lib_pq//:go_default_library",
    ],
)

load("@io_bazel_rules_docker//docker:docker.bzl", "docker_bundle")

docker_bundle(
    name = "kipp_bundle",
    images = {
        "index.docker.io/uhthomas/kipp:latest": ":kipp",
        "index.docker.io/uhthomas/kipp:{BUILD_TIMESTAMP}": ":kipp",
    },
)

docker_bundle(
    name = "kipp_bundle_github",
    images = {
        "docker.pkg.github.com/uhthomas/kipp/kipp:latest": ":kipp",
        "docker.pkg.github.com/uhthomas/kipp/kipp:{BUILD_TIMESTAMP}": ":kipp",
    },
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

docker_push(
    name = "push",
    bundle = "kipp_bundle",
)

docker_push(
    name = "push_github",
    bundle = "kipp_bundle_github",
)
