load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "flag.go",
        "main.go",
        "mime.go",
        "serve.go",
    ],
    importpath = "github.com/uhthomas/kipp/cmd/kipp",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//internal/databaseutil:go_default_library",
        "//internal/filesystemutil:go_default_library",
        "//internal/x/context:go_default_library",
        "@com_github_alecthomas_units//:go_default_library",
        "@com_github_jackc_pgx//stdlib:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "kipp",
    data = ["//:web"],
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)

load("@io_bazel_rules_docker//docker:docker.bzl", "docker_bundle")

docker_bundle(
    name = "kipp_bundle",
    images = {
        "index.docker.io/uhthomas/kipp:latest": ":kipp",
        "index.docker.io/uhthomas/kipp:{STABLE_GIT_COMMIT}": ":kipp",
        "ghcr.io/uhthomas/kipp:latest": ":kipp",
        "ghcr.io/uhthomas/kipp:{STABLE_GIT_COMMIT}": ":kipp",
    },
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

docker_push(
    name = "push",
    bundle = "kipp_bundle",
    # Pushing layers concurrently sometimes fails.
    # See GitHub support ticket 885486.
    sequential = True,
)
