load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "file.go",
        "local.go",
    ],
    importpath = "github.com/uhthomas/kipp/filesystem/local",
    visibility = ["//visibility:public"],
    deps = ["//filesystem:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["local_test.go"],
    embed = [":go_default_library"],
    deps = ["//filesystem:go_default_library"],
)
