load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["parse.go"],
    importpath = "github.com/uhthomas/kipp/internal/filesystemutil",
    visibility = ["//:__subpackages__"],
    deps = [
        "//database:go_default_library",
        "//database/badger:go_default_library",
        "//database/sql:go_default_library",
    ],
)
