load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["parse.go"],
    importpath = "github.com/uhthomas/kipp/internal/filesystemutil",
    visibility = ["//:__subpackages__"],
    deps = [
        "//filesystem:go_default_library",
        "//filesystem/local:go_default_library",
        "//filesystem/s3:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
    ],
)
