load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["httputil.go"],
    importpath = "github.com/uhthomas/kipp/internal/httputil",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/x/context:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
